styles.css
/* ... */
.other-projects a img {
  object-fit: cover;
  height: 300px;
}

.other-projects div {
  padding: 2rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 1rem;
}

.other-projects h4 {
  font-size: clamp(1.5rem, 2vw, 2rem);
}

.other-projects ul {
  display: flex;
  align-items: center;
  gap: 1rem;
  color: var(--accent-clr);
  font-size: clamp(1.15rem, 1vw, 1.3rem);
}

.other-projects p {
  font-size: clamp(1.15rem, 1vw, 1.3rem);
}

/*******************
		CONTACT SECTION
*************************/
.contact {
  margin-block-start: var(--section-mt);
  padding: 4rem 1rem;
}

.mail-link {
  display: flex;
  margin-block-start: var(--section-mt);
  width: max-content;
  transition: var(--transition-clr);
  position: relative;
  text-transform: uppercase;
  letter-spacing: 1px;
}

.mail-link:hover {
  color: var(--accent-clr);
  text-decoration: none;
}

/*******************
		FOOTER
*************************/
.footer {
  margin-block-start: var(--section-mt);
  background: var(--secondary-clr);
  padding: 0 1rem;
}

.footer .container {
  margin-block-start: var(--section-mt);
  font-size: 1.35rem;
  padding: 2rem 1rem;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
}

.footer em {
  color: var(--other-clr);
}

.footer div {
  display: flex;
  align-items: center;
  gap: 5rem;
}

.footer ul {
  display: flex;
  align-items: center;
  gap: 2rem;
}

.footer a {
  letter-spacing: 1px;
  transition: var(--transition-clr);
  position: relative;
}

.footer a:hover {
  color: var(--accent-clr);
}

.top {
  display: flex;
  align-items: center;
  justify-content: center;
  line-height: 0;
  font-size: 1.15rem;
}

.scroll {
  display: flex;
  flex-direction: column;
  gap: 1.2rem;
  align-items: flex-end;
}

/* responsiveness */
@media screen and (max-width: 1080px) {
  body::after {
    position: absolute;
    content: "";
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: var(--secondary-clr);
    transform: translateY(-100%);
  }

  body.open::after {
    transition: transform 300ms ease-in-out;
    transform: translateY(0);
  }

  .skip-to-content {
    display: none;
  }

  .nav {
    position: relative;
    z-index: 1;
  }

  .nav-list,
  .social-nav {
    transition: opacity 300ms ease-in-out;
  }

  .nav-list {
    flex-direction: column;
    position: absolute;
    top: 250px;
    left: 50%;
    transform: translate(-50%);
    height: 100vh;
    opacity: 0;
    pointer-events: none;
  }

  .social-nav {
    opacity: 0;
    pointer-events: none;
    position: absolute;
    top: 175px;
    left: 50%;
    transform: translateX(-50%);
  }

  .nav-list.open,
  .social-nav.open {
    opacity: 1;
    pointer-events: all;
  }

  .hero-btn-container {
    justify-content: center;
  }

  /* hamburger menu */
  .hamburger {
    width: 25px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    cursor: pointer;
    transition: transform 330ms ease-out;
  }

  .hamburger.open {
    transform: rotate(-45deg);
  }

  .line-menu {
    background: hsl(0, 0%, 100%);
    width: 100%;
    height: 1.5px;
  }

  .line-menu:not(:first-child) {
    margin-block-start: 0.75rem;
  }

  .line-menu.half {
    width: 50%;
  }

  .line-menu.start {
    transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
    transform-origin: right;
  }

  .open .line-menu.start {
    transform: rotate(-90deg) translateX(3px);
  }

  .line-menu.end {
    align-self: flex-end;
    transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
    transform-origin: left;
  }

  .open .line-menu.end {
    transform: rotate(-90deg) translateX(-3px);
  }

  .hero .container {
    height: 60vh;
    text-align: center;
    position: relative;
  }

  .hero img {
    display: none;
  }

  .my-skills ul {
    grid-template-columns: repeat(2, 1fr);
  }

  /* For the .project:nth-child(even) selector */
  .project:nth-child(even) img {
    order: 1;
    -webkit-order: 1; /* Safari prefix */
  }
  .project:nth-child(even) div {
    order: 2;
    -webkit-order: 2; /* Safari prefix */
  }

  .footer .container {
    justify-content: center;
    gap: 3rem;
  }

  .mail-link {
    justify-content: center;
  }
}

